tests/NormalTests/paczka1/fuzzy1/69818592.err
Error in line 1: A918 A674 50,1
Error in line 2: nyvNqS A674 33,3
Error in line 5: nyvNqS A907 93,2
Error in line 7: lSFDnF A674 0,4
Error in line 15: XbVk4MpwL A907 79,6
Error in line 31: GGInfKPu4q S570 169,3
Error in line 37: Ax3 A907 -2,8
